# webdev-console

./: .cmd-kill.json  .cmd-launch.json  .gitignore  README.md  SPEC.md  WebDevConsole.sln  package.json  run.cmd  start-all.cmd  start-daemon.cmd  start-frontend.cmd  start.cmd
.github/: dependabot.yml
.github/workflows/: api-type-check.yml  build-binaries.yml  build.yml  catalog-contract.yml  ci.yml  defender-submit.yml  e2e-lifecycle.yml  e2e-p0.yml  publish-sdk.yml  release-scan.yml  test.yml
devforge-poc/: .gitignore  electron-builder.json  package-lock.json  package.json  tsconfig.json
devforge-poc/daemon/: Program.cs  daemon.csproj
devforge-poc/electron/: main.ts  preload.ts
devforge-poc/src/: App.vue  index.html  main.ts
docs/: 00-START-HERE.md  DELIVERY-REPORT.md  DOCUMENTATION-SUMMARY.md  FILES-MANIFEST.md  INDEX.md  README.md  TABLE-OF-CONTENTS.md  audit-2026-04-11-phase-completion.md  autonomous-workflow.md  binaries-audit-2026-04-18.md  binaries-audit-log.md  e2e-scenarios.md  getting-started.md  migration-mamp-pro.md  perf-baselines.json  perf-baselines.md  plugin-sdk-reference.md  release-update-runbook.md  troubleshooting.md
docs/package-urls/: flyenv-urls.json
prototype/gui/src-tauri/: Cargo.toml  tauri.conf.json
prototype/gui/src-tauri/capabilities/: default.json
prototype/gui/src-tauri/src/: commands.rs  daemon.rs  lib.rs  main.rs  tray.rs
scripts/: build-nksdeploy-phar.mjs  check-catalog-drift.mjs  e2e-isolated-lifecycle.mjs  e2e-runner.mjs  extract-logo.py  generate-api-types.mjs  perf-baseline.mjs  serve-electron-update-feed.mjs  setup-macos.sh  smoke-e2e.mjs  smoke-f91-disable.mjs  smoke-packaged-electron.mjs  stage-plugins.mjs  submit-defender.ps1  verify-electron-release.mjs
services/: catalog-api-MOVED.md
services/catalog-api/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.cmd
services/catalog-api/app/: __init__.py  auth.py  catalog.py  config_sync.py  db.py  devices.py  generators.py  main.py  schemas.py  service.py
services/catalog-api/app/data/apps/: apache.json  caddy.json  cloudflared.json  mailpit.json  mariadb.json  mkcert.json  mysql.json  nginx.json  php.json  redis.json
services/catalog-api/app/static/: admin.css
services/catalog-api/app/templates/: app_detail.html  app_form.html  apps_list.html  base.html  login.html
services/catalog-api/tests/: conftest.py  test_auth.py  test_devices.py  test_generators.py  test_service.py  test_smoke.py
tests/: Directory.Build.props
tools/: dev-daemon-rebuild.sh  e2e-mcp-deploy.sh  pre-push-check.sh  remote-cmd.sh  validate-cutover.sh
(+596 files in other folders)
