[package]
name = "wdc-gui"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
description = "NKS WebDev Console — local dev server management GUI"
license = "Apache-2.0"

[lib]
name = "wdc_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "wdc-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-default"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-tray = "2"
tauri-plugin-updater = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Named pipe IPC with Go daemon (Windows)
# tokio on Windows includes named pipe support in tokio::net::windows
# No additional crate needed beyond tokio "full"

# Windows-specific APIs
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }

# JSON-RPC serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File watching (for config file change detection)
notify = "6"
notify-debouncer-mini = "0.4"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID for event IDs
uuid = { version = "1", features = ["v4"] }

# Terminal PTY support
portable-pty = "0.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "s"       # Optimize for size
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
